--- a/assets/scss/partials/_baseFeatures.scss
+++ b/assets/scss/partials/_baseFeatures.scss
@@ -9,10 +9,10 @@ html {
 header{
     position: fixed;
     top: 0;
-    left: 10%;
+    left: 0;
     right: 0;
     z-index: 1030;
-   justify-content: center;
+   
    
 }
 
@@ -65,3 +65,25 @@ header{
 }
 
 .dots{@include dots}
+
+
+@media only screen and (max-width: 768px){
+
+    
+    .container{
+        max-width:700px!important ;
+    }
+}
+
+@media only screen and (max-width: 576px){
+
+    header{
+        .container{
+            padding: 0;
+        }
+    }
+
+    
+}
+
+
