--- a/assets/scss/partials/_chefs.scss
+++ b/assets/scss/partials/_chefs.scss
@@ -4,7 +4,7 @@
 
     .card{
         border-radius: 0;
-        position: relative;
+       
         &::after{
             content: '';
             position: absolute;
@@ -45,16 +45,20 @@
 
         }
 
-        img{
-            border-radius:0;
+        .over-image{
             position: relative;
-           
-            
-
-            
-
-
+            img{
+                border-radius:0;
+                position: relative;
+               
+                
+    
+                
+    
+    
+            }
         }
+       
 
         
 
@@ -63,7 +67,7 @@
             top: 0px;
             left: 0;
             width: 100%;
-            height: 53%;
+            height: 100%;
             visibility: hidden;
             opacity: 0;
             @include transition(.5s);
@@ -161,3 +165,17 @@
         }
     }
 }
+
+@media only screen and (max-width:770px){
+
+    #chefs{
+
+        .card{
+            margin-bottom: 15px;
+
+        }
+
+        
+    }
+}
+
