--- a/assets/scss/partials/_opening.scss
+++ b/assets/scss/partials/_opening.scss
@@ -168,3 +168,12 @@
         }
     }
 }
+
+@media only screen and (max-width:770px){
+
+    #opening{
+        .plate{
+            padding: 100px;
+            background-size: 100% 100%;}
+    }
+}
