--- a/assets/scss/partials/_story.scss
+++ b/assets/scss/partials/_story.scss
@@ -74,3 +74,16 @@
 
     
 }
+
+@media  only screen and (max-width:770px){
+
+    #story{
+        .story-content{
+
+            a.explore-btn{
+                margin-bottom:15px;
+            }
+        }
+    }
+    
+}
