--- a/assets/scss/partials/cart/_cart.scss
+++ b/assets/scss/partials/cart/_cart.scss
@@ -2,7 +2,17 @@
     padding: 80px 0;
     position: relative;
 
+    .table{
+        p{
+            span{
+                color: $mainColor;
+            }
+        }
+    }
+
     table{
+        
+       
         th{
             font-family: $secondaryFont;
             text-align: center;
@@ -140,4 +150,18 @@
         width: 100%;
         bottom: -15px;
     }
+}
+
+@media only screen and (max-width:770px){
+#cart{
+
+    .apply{
+        margin-bottom: 25px;
+    }
+
+    table{
+        font-size: 13px;
+    }
+}
+
 }
