--- a/assets/scss/partials/checkout/_checkout.scss
+++ b/assets/scss/partials/checkout/_checkout.scss
@@ -118,3 +118,15 @@
         bottom: -15px;
     }
 }
+
+@media only screen and (max-width:770px){
+    #checkout{
+    
+        .pay{
+            margin-bottom: 25px;
+        }
+    
+       
+    }
+    
+    }
