--- a/assets/scss/partials/contact/_touch.scss
+++ b/assets/scss/partials/contact/_touch.scss
@@ -248,3 +248,63 @@
         bottom: -15px;
     }
 }
+
+@media only screen and (max-width:576px){
+    #touch .contact-inputs .text p {
+        padding: 0;
+    }
+
+    .contact-details{
+     
+       
+    
+       
+    
+        .contact-inner{
+           
+            
+            background: #fff;
+           
+    
+            p{
+                color: black;
+                font-size: 30px;
+                font-weight: 700;
+    
+            }
+    
+            ul{
+    
+                li{
+                    i{
+                        color: $mainColor;
+                        margin-right: 10px;
+                    }
+                    p{
+                        color: black;
+                        font-size: 13px;
+                        font-weight: 500;
+                        margin-right: 10px;
+                    }
+    
+                    a{
+                        text-decoration: none;
+                        font-weight: 600;
+                        color: black;
+                        font-size: 13px;
+                        @include transition(.7s);
+    
+                        &:hover{
+                            color: $mainColor;
+                            @include transition(.7s);
+                            text-decoration: underline;
+                        }
+                    }
+                }
+            }
+    
+            .dots{
+                color: $mainColor;
+            }
+    }}
+}
