--- a/assets/scss/partials/item/_singleItem.scss
+++ b/assets/scss/partials/item/_singleItem.scss
@@ -399,6 +399,7 @@
 
         .also-like {
             padding-top: 20px;
+            
 
             p{
                 font-size: 20px;
@@ -730,3 +731,25 @@
         bottom: -15px;
     }
 }
+
+@media only screen and (max-width:770px){
+    #single-item{
+    
+        .search{
+            margin-top: 15px;
+        }
+    }
+}
+
+@media only screen and (max-width:567px){
+    #single-item .product .quantity {
+        
+        margin-bottom: 25px;
+    }
+
+    #single-item .product .review-text .review-inner .review-image {
+        padding-top: 10px;
+        width: 300px;
+        height: 300px;
+    }
+    }
