--- a/assets/scss/partials/shop/_items.scss
+++ b/assets/scss/partials/shop/_items.scss
@@ -420,3 +420,13 @@
         bottom: -15px;
     }
 }
+
+@media only screen and (max-width:770px){
+#items{
+
+    .search{
+        margin-top: 15px;
+    }
+}
+}
+
