--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -15,6 +15,7 @@
 @import "./partials/footer";
 @import "./partials/error";
 @import "./partials/about/aboutIntro";
+@import "./partials/about/story";
 @import "./partials/about/stats";
 @import "./partials/about/video";
 @import "./partials/contact/contactIntro";
