validations of forms done

--- a/assets/scss/partials/_footer.scss
+++ b/assets/scss/partials/_footer.scss
@@ -228,10 +228,16 @@
                 color: $mainColor;
             }
 
-            &:hover{
+            &:focus{
                 box-shadow: none;
             }
         }
+    }
+
+    .subsuccess{
+        color: $mainColor;
+        font-family: $secondaryFont;
+        display: none;
     }
 }
 
