--- a/assets/scss/partials/contact/_touch.scss
+++ b/assets/scss/partials/contact/_touch.scss
@@ -5,7 +5,6 @@
     background-size: 100%;
     position: relative;
 
-    
 
 
     .hours-contact{
@@ -236,6 +235,14 @@
                 color: #5e646a;
                 font-weight: 500;
             }
+        }
+
+        
+        span.contact-success{
+            font-size: 12px;
+            color: $mainColor;
+            font-family: $secondaryFont;
+            display: none;
         }
     }
 
