--- a/Restabook/Restabook/Views/Product/Index.cshtml
+++ b/Restabook/Restabook/Views/Product/Index.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Detail";
     Layout = "~/Views/Shared/_Layout.cshtml";
     AppUser user = User.Identity.IsAuthenticated ? await usermanager.FindByNameAsync(User.Identity.Name) : null;
+
+    int? categoryId = ViewBag.CategoryId;
 }
 
 <main>
@@ -276,7 +278,7 @@
                             <ul class="list-unstyled mt-3">
                                 @foreach (var item in Model.Categories)
                                 {
-                                    <li class="category-link"><a asp-controller="shop" asp-action="index" class="category-btn">@item.Name</a> <span>@Model.Products.Where(c => c.Category.Name == item.Name).Count()</span></li>
+                                    <li class="category-link"><a asp-controller="shop" asp-action="index" asp-route-categoryId="@categoryId" class="category-btn">@item.Name</a> <span>@Model.Products.Where(c => c.Category.Name == item.Name).Count()</span></li>
                                 }
 
 
