--- a/Restabook/Restabook/Areas/Manage/Views/Shared/_Layout.cshtml
+++ b/Restabook/Restabook/Areas/Manage/Views/Shared/_Layout.cshtml
@@ -180,13 +180,13 @@
                                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Profile
                                 </a>
-                                <a class="dropdown-item" href="#">
-                                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Settings
-                                </a>
-                                <a class="dropdown-item" href="#">
+                                <a class="dropdown-item" asp-action="index" asp-controller="administration">
                                     <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Activity Log
+                                    Role List
+                                </a>
+                                <a class="dropdown-item" asp-action="listusers" asp-controller="administration">
+                                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
+                                   User List
                                 </a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" asp-controller="account" asp-action="login" data-toggle="modal" data-target="#logoutModal">
