--- a/Restabook/Restabook/Views/Shared/Components/Product/Default.cshtml
+++ b/Restabook/Restabook/Views/Shared/Components/Product/Default.cshtml
@@ -26,7 +26,7 @@
                         </div>
                         <p>@item.SmallDesc</p>
                         <div class="bottom">
-                            <span class="price">$@item.Price</span>
+                            <span class="price">$@item.DiscountedPrice</span>
                             @if (user != null)
                             {
                                 <a asp-action="addbasket" asp-controller="cart" asp-route-id="@item.Id" class="add-btn">Add to Cart</a>
